--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -120,3 +120,50 @@ td.actions a {
 li { font-size: 13px; line-height: 25px}
 
 .error {color: @flat-red; font-size: 15px; font-style: italic; margin-bottom: 15px; text-align: center}
+
+i.bouton div.info-bulle {
+    visibility: hidden;
+    opacity: 0;
+    font-family: "Open Sans";
+    text-align: left;
+    position: absolute;
+    right: 10px;
+    top: 105px;
+    color: @white;
+    transition: 0.3s ease-out;
+    -webkit-transition: 0.3s ease-out;
+}
+i.bouton:hover div.info-bulle{
+        visibility: visible;
+        opacity: 1;
+        top: 90px;
+        transition: 0.8s ease-out;
+        -webkit-transition: 0.8s ease-out;
+    }
+
+div.info-bulle {
+    width: 30%;
+    padding: 0px;
+    margin: 0 auto;
+    background: @light-dark-blue;
+}
+
+div.info-bulle p {
+    font-size: 13px;
+    color: @white;
+    padding: 10px 5px;
+    margin: 0;
+    text-align: center;
+}
+
+div.info-bulle::before {
+    content: '' !important;
+    position: absolute !important;
+    bottom: -5px;
+    left: 87%;
+    width: 0;
+    height: 0;
+    border-top: 5px solid @light-dark-blue;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+}
