--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -35,5 +35,4 @@
   border-radius: @tl @tr @br @bl;
 }
 
-.center { margin: 0 auto; text-align: center }
-
+.center,.info-bulle p { margin: 0 auto;text-align: center !important}
