--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -19,7 +19,7 @@
                     <i class="fa fa-edit icon-size"></i>
                     <a class="text-default" href=""><i class="fa fa-search icon-size bouton">
                             <div class="info-bulle">
-                                <p>Décembre : </p>
+                                <p class="center"><strong>Récapitulatif sur Décembre : </strong></p>
                                 <ul>
                                     <li>Jours d'absence : 5</li>
                                     <li>Jours de présence : 15</li>
@@ -31,13 +31,6 @@
             </tr>
         {% endfor %}
     </table>
-    <!-- Generated markup by the plugin -->
-    <div class="tooltip top" role="tooltip">
-        <div class="tooltip-arrow"></div>
-        <div class="tooltip-inner">
-            Some tooltip text!
-        </div>
-    </div>
     <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
