Tooltip page collab + css

--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -38,7 +38,17 @@
                 <td class="actions text-center">
                     <a class="text-danger" href=""><i class="fa fa-trash-o icon-size"></i></a>
                     <a class="text-default" href=""><i class="fa fa-edit icon-size"></i></a>
-                    <a class="text-default" href=""><i class="fa fa-search icon-size"></i></a>
+                    <a class="text-default" href="">
+                        <i class="fa fa-search icon-size bouton">
+                            <div class="info-bulle">
+                                <p class="center"><strong>Récapitulatif sur Décembre : </strong></p>
+                                <ul>
+                                    <li>Jours d'absence : 5</li>
+                                    <li>Jours de présence : 15</li>
+                                </ul>
+                            </div>
+                        </i>
+                    </a>
                 </td>
                 <td class="text-center"><div class="checkbox">
                         <label>
@@ -55,7 +65,17 @@
                 <td class="actions text-center">
                     <a class="text-danger" href=""><i class="fa fa-trash-o icon-size"></i></a>
                     <a class="text-default" href=""><i class="fa fa-edit icon-size"></i></a>
-                    <a class="text-default" href=""><i class="fa fa-search icon-size"></i></a>
+                    <a class="text-default" href="">
+                        <i class="fa fa-search icon-size bouton">
+                            <div class="info-bulle">
+                                <p class="center"><strong>Récapitulatif sur Décembre : </strong></p>
+                                <ul>
+                                    <li>Jours d'absence : 5</li>
+                                    <li>Jours de présence : 15</li>
+                                </ul>
+                            </div>
+                        </i>
+                    </a>
                 </td>
                 <td class="text-center"><div class="checkbox">
                         <label>
