--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -17,7 +17,8 @@
                         <i class="fa fa-trash-o icon-size" data-toggle="modal"  data-target="#myModal4"></i>
                     </a>
                     <i class="fa fa-edit icon-size"></i>
-                    <a class="text-default" href=""><i class="fa fa-search icon-size bouton">
+                    <a class="text-default" href="">
+                        <i class="fa fa-search icon-size bouton">
                             <div class="info-bulle">
                                 <p class="center"><strong>Récapitulatif sur Décembre : </strong></p>
                                 <ul>
@@ -25,8 +26,8 @@
                                     <li>Jours de présence : 15</li>
                                 </ul>
                             </div>
-                        </i></a>
-
+                         </i>
+                    </a>
                 </td>
             </tr>
         {% endfor %}
