--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -1,7 +1,7 @@
 @import "class";
 
 label.control-label span { cursor: pointer; }
-body { font-size: 12px}
+body { font-size: 13px}
 
 .hover {
     visibility: visible;
@@ -38,7 +38,7 @@ h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top: @margi
 
 .form-control { height:33px; padding:6px 4px }
 
-#select { height: 28px; font-size: 12px}
+#select { height: 28px; font-size: 13px; padding-top:4px}
 
 .modal-body { font-size: 13px }
 
@@ -97,7 +97,7 @@ td.actions a {
 .btn-default,
 .btn-block,
 .btn-primary {
-    border: none; background: @blue-bird; color: @white; padding: 6px; font-size: 12px;
+    border: none; background: @blue-bird; color: @white; padding: 6px; font-size: 13px;
     &:hover {
         transition-duration: @transition; background: @white; color: @blue-bird; outline: solid 1px @blue-bird; text-decoration: none;
     }
