--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,6 +32,8 @@
     {% block javascripts %}
         <script src="{{ asset('bundles/user/js/jquery.js') }}"></script>
         <script src="{{ asset('bundles/user/js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('bundles/user/js/notify.min.js') }}"></script>
+        <script src="{{ asset('bundles/user/js/main.js') }}"></script>
     {% endblock %}
 
 </head>
