--- a/src/BirdOffice/UserBundle/Resources/views/Default/emailing-refus.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/emailing-refus.html.twig
@@ -2,7 +2,7 @@
 <html xmlns:border-left="http://www.w3.org/1999/xhtml" xmlns:border-right="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Demande d'absence validée</title>
+        <title>Demande d'absence refusée</title>
     </head>
     <body bgcolor="#ffffff" topmargin="0" marginheight="0">
         <table width="100%" cellpadding="0" cellspacing="0" border="0">
@@ -17,25 +17,22 @@
                             <td valign="top" width="200"></td>
                         </tr>
                         <tr>
-                            <td valign="top" width="600" height="3" colspan="3" bgcolor="#7EBDCE"></td>
+                            <td valign="top" width="600" height="3" colspan="3" bgcolor="#27ae60"></td>
+                        </tr>
+                        <tr>
+                            <td valign="top" width="600" height="263" colspan="3" bgcolor="#7EBDCE">
+                                <img src="{{ asset('img-emailing/visuel-small.jpg') }}" title="Gestion de planning" />
+                            </td>
                         </tr>
                     </table>
                     <table cellpadding="0" cellspacing="0" border="0" width="600" height="">
-                        <tr>
-                            <td valign="top" width="600" height="55" colspan="3">&nbsp;</td>
-                        </tr>
-                        <tr>
-                            <td valign="top" align="center" width="600" height="35" colspan="3">
-                                <font face="Arial" size="1" color="#3c5166" style="font-size:16px;border-bottom: solid 1px;"><strong>Gestion du planning</strong></font>
-                            </td>
-                        </tr>
                         <tr>
                             <td valign="top" width="600" height="15" colspan="3">&nbsp;</td>
                         </tr>
                         <tr>
                             <td valign="top" width="200"></td>
                             <td valign="top" align="center" width="200">
-                                <font face="Arial" size="1" color="#c0392b" style="font-size:13px;"><strong><i>Demande non validée !</i></strong></font>
+                                <font face="Arial" size="1" color="#e74c3c" style="font-size:13px;"><strong><i>Demande non validée !</i></strong></font>
                             </td>
                             <td valign="top" width="200"></td>
                         </tr>
