--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -9,6 +9,9 @@
 
 <div class="container-fluid">
     <div class="row">
+        <div class="col-md-12 space40"></div>
+    </div>
+    <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
             <div class="wrapper">
