--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -34,6 +34,10 @@ h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top: @margi
         background: @flatgreen;
     }
 }
+
+.visuel {background: @blue-bird;
+&.center-block {margin-bottom: 20px}}
+
 .datepicker.dropdown-menu { z-index: 9999 }
 
 .form-control { height:33px; padding:6px 4px }
@@ -71,6 +75,12 @@ h2.nom-collab {color: #3c5166; font-weight: bold; text-align: center}
 
 .right{ float: right}
 
+.no-marge {margin:0; padding:0}
+
+.center-block { display: block; margin: 0 auto}
+
+.full {width: 100%; background: @blue-bird}
+
 .icon-size {
     cursor: pointer;
     font-size: 19px;
@@ -90,7 +100,7 @@ td.actions a {
 
 .navbar { min-height: 55px}
 
-.navbar-default { border-bottom: 3px solid #7EBDCE; margin-bottom: 70px }
+.navbar-default { border-bottom: 3px solid @flat-green; margin-bottom:0}
 
 .table {border-top:none}
 
