--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,7 @@
                     <nav class="navbar">
                         <div class="navbar-header">
                             <a class="navbar-brand" href="#">
-                                <img class="logo" src="{{ asset('images/logo.png') }}" title="Bird Office Logo" />
+                                <img class="logo" src="{{ asset('images/logo.png') }}" alt="Bird Office Logo" />
                             </a>
                         </div>
                     </nav>
@@ -54,6 +54,13 @@
         </div>
     </nav>
     <div class="container-fluid">
+        {% if app.request.attributes.get('_route') != 'fos_user_security_login' %}
+        <div class="row">
+            <div class="col-md-12 no-marge">
+                <div class="full"><img class="visuel center-block" src="{{ asset('images/visuel-web.jpg') }}" alt="Outil de gestion de planning"/></div>
+            </div>
+        </div>
+        {% endif %}
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
