--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -36,3 +36,9 @@
 }
 
 .center,.info-bulle p { margin: 0 auto;text-align: center !important}
+
+@media screen and (max-width: 625px) {
+  .visuel {
+    width: 100%;
+  }
+}
