--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -36,7 +36,8 @@ h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top: @margi
 }
 
 .visuel {background: @blue-bird;
-&.center-block {margin-bottom: 20px}}
+        margin-bottom: 20px
+}
 
 .datepicker.dropdown-menu { z-index: 9999 }
 
@@ -76,8 +77,6 @@ h2.nom-collab {color: #3c5166; font-weight: bold; text-align: center}
 .right{ float: right}
 
 .no-marge {margin:0; padding:0}
-
-.center-block { display: block; margin: 0 auto}
 
 .full {width: 100%; background: @blue-bird}
 
