--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -57,7 +57,7 @@
         {% if app.request.attributes.get('_route') != 'fos_user_security_login' %}
         <div class="row">
             <div class="col-md-12 no-marge">
-                <div class="full"><img class="visuel center-block" src="{{ asset('images/visuel-web.jpg') }}" alt="Outil de gestion de planning"/></div>
+                <div class="full"><img class="visuel center block" src="{{ asset('images/visuel-web.jpg') }}" alt="Outil de gestion de planning"/></div>
             </div>
         </div>
         {% endif %}
