--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -178,4 +178,7 @@ div.info-bulle::before {
     width: 0;
     height: 0;
 }
-.switch { text-align: center}
+.day { text-align: center; cursor: pointer}
+
+.switch {text-align: center}
+
