--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -74,7 +74,9 @@
                         <label for="date-picker-3" class="control-label">Date début</label>
                             <div class="controls">
                                 <div class="input-group">
-                                    <label for="date-picker-3" class="input-group-addon btn"></label>
+                                    <label for="date-picker-3" class="input-group-addon btn">
+                                        <i class="fa fa-calendar"></i>
+                                    </label>
                                     <input id="date-picker-3" type="text" class="date-picker form-control" />
                                 </div>
                             </div>
@@ -83,8 +85,10 @@
                         <label for="date-picker-3" class="control-label">Date fin</label>
                             <div class="controls">
                                 <div class="input-group">
-                                    <label for="date-picker-3" class="input-group-addon btn"></label>
-                                    <input id="date-picker-3" type="text" class="date-picker form-control" />
+                                    <label for="date-picker-4" class="input-group-addon btn">
+                                        <i class="fa fa-calendar"></i>
+                                    </label>
+                                    <input id="date-picker-4" type="text" class="date-picker form-control" />
                                 </div>
                             </div>
                         </div>
