--- a/src/BirdOffice/UserBundle/Resources/views/Default/emailing-reponse.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/emailing-reponse.html.twig
@@ -12,16 +12,20 @@
                         <tr>
                             <td valign="top" width="200"></td>
                             <td valign="middle" align="center" width="600" height="50">
-                                <img class="logo" src="{{ asset('images/logo.png') }}" title="Bird Office Logo" />
+                                {% image '@UserBundle/Resources/public/img-emailing/logo.png' %}
+                                     <img src="{{ asset_url }}" alt="Logo Bird Office" />
+                                {% endimage %}
                             </td>
                             <td valign="top" width="200"></td>
-                        </tr>
+                        </tr
                         <tr>
                             <td valign="top" width="600" height="3" colspan="3" bgcolor="#27ae60"></td>
                         </tr>
                         <tr>
                             <td valign="top" width="600" height="200" colspan="3" bgcolor="#7EBDCE">
-                                <img src="{{ asset('img-emailing/visuel-small.jpg') }}" title="Gestion de planning" />
+                                {% image '@UserBundle/Resources/public/img-emailing/visuel-small.jpg' %}
+                                    <img src="{{ asset_url }}" alt="Outil de gestion de planning" />
+                                {% endimage %}
                             </td>
                         </tr>
                     </table>
