--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -174,7 +174,7 @@
 
     // Show add modal
 
-    var showAddModal = "{{ path('show_add_modal') }}";
+    var showAddModal = "{{ path('showAddModal') }}";
 
     $('#add-partner').click(function (){
         show_add_modal();
