--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -133,7 +133,7 @@ td.actions a {
 }
 li { font-size: 13px; line-height: 25px}
 
-.error {color: @flat-red; font-size: 15px; font-style: italic; margin-bottom: 15px; text-align: center}
+.error {color: @flat-red; font-size: 15px; font-style: italic; margin-top: 35px; text-align: center}
 
 i.bouton div.info-bulle {
     visibility: hidden;
