--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -6,8 +6,8 @@
     <form {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
 
         {{ form_row(form.civility) }}
-        {{ form_row(form.name) }}
-        {{ form_row(form.username) }}
+        {{ form_row(form.lastname) }}
+        {{ form_row(form.firstname) }}
         {{ form_row(form.email) }}
         {{ form_row(form.plainPassword) }}
         {{ form_row(form.managedBy) }}
