Btn Détails page Collaborateur

--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -31,7 +31,7 @@ h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top: @margi
         background: @pink-flat;margin-bottom: 0;
     }
     &.success {
-        background: @flatgreen;
+        background: @flatgreen; height: 45px
     }
 }
 
