--- a/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
@@ -4,6 +4,7 @@
         <th class="text-center">Durée</th>
         <th class="text-center">Type</th>
         <th class="text-center">Description</th>
+        <th class="text-center">Détails</th>
         <th class="text-center" width="100">Actions</th>
         <th class="text-center" width="100">Validation</th>
     </tr>
@@ -13,6 +14,11 @@
         <td class="text-center">{{ day.hours }} heures</td>
         <td class="text-center">Absence : {{ day.absenceType.name }}</td>
         <td class="text-center">{{ day.description|default('') }}</td>
+        <td class="text-center">
+            <button type="button" class="btn btn-primary right" data-toggle="modal" data-target="#myModal">
+                Détails
+            </button>
+        </td>
         <td class="actions text-center">
             <a class="text-danger" href=""><i class="fa fa-trash-o icon-size"></i></a>
             <a class="text-default" href=""><i class="fa fa-edit icon-size"></i></a>
