--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -38,8 +38,9 @@ h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top: @margi
 .visuel {background: @blue-bird;
         margin-bottom: 20px
 }
+.table-condensed > thead { background:@blue-bird; color: @white}
 
-.datepicker.dropdown-menu { z-index: 9999 }
+.datepicker.dropdown-menu { z-index: 9999; padding: 0 }
 
 .form-control { height:33px; padding:6px 4px }
 
