--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -23,7 +23,9 @@ h2.form-signin-heading { font-size: 15px; font-style: italic; margin-top: @margi
 
 .margin15 { margin-bottom: 15px!important}
 
-.head-table th { background: @blue-bird!important; border: none !important; color: #ffffff; }
+.head-table th { background: @blue-bird!important; border: none !important; color: @white }
+
+.text-center { vertical-align: middle !important}
 
 .modal-header {
     background:@blue-bird; color: @white;
@@ -163,7 +165,6 @@ div.info-bulle::before {
     width: 0;
     height: 0;
 }
-.day { text-align: center; cursor: pointer}
+.day, .next, .prev  { text-align: center; cursor: pointer}
 
 .switch {text-align: center}
-
